--- a/.github/workflows/content-api.yml
+++ b/.github/workflows/content-api.yml
@@ -25,7 +25,7 @@ env:
 
 # Jobs define the actions that take place when code is pushed to the main branch
 jobs:
-  build-and-push-docker-image:
+  release:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     steps:
