--- a/.github/workflows/content-api.yml
+++ b/.github/workflows/content-api.yml
@@ -1,4 +1,4 @@
-name: content-apii
+name: content-api
 
 # This workflow is triggered on push to the 'content-web' directory of the  main branch of the repository
 on:
@@ -43,3 +43,20 @@ jobs:
         registry: ${{ env.containerRegistry }}
         repository: ${{ env.imageRepository }}
         tags: ${{ env.tag }},latest
+
+     - uses: Azure/aks-set-context@v1
+       with:
+         creds: '${{ secrets.AZURE_CREDENTIALS }}'
+         cluster-name: '${{ env.clusterName }}'
+         resource-group: '${{ env.resourceGroupName }}'
+        
+     - name: Deploy to AKS
+       uses: azure/k8s-deploy@v1
+       with:
+         manifests: |
+           api.deployment.yml
+           api.service.yml
+         images: |
+           ${{ env.containerRegistry }}.azurecr.io/${{ env.imageRepository }}:${{ env.tag }}
+         imagepullsecrets: |
+           ingress-demo
