--- a/.github/workflows/content-api.yml
+++ b/.github/workflows/content-api.yml
@@ -43,20 +43,9 @@ jobs:
         registry: ${{ env.containerRegistry }}
         repository: ${{ env.imageRepository }}
         tags: ${{ env.tag }},latest
-
-     - uses: Azure/aks-set-context@v1
-       with:
+    - name: set-context
+      uses: Azure/aks-set-context@v1
+      with:
          creds: '${{ secrets.AZURE_CREDENTIALS }}'
          cluster-name: '${{ env.clusterName }}'
-         resource-group: '${{ env.resourceGroupName }}'
-        
-     - name: Deploy to AKS
-       uses: azure/k8s-deploy@v1
-       with:
-         manifests: |
-           api.deployment.yml
-           api.service.yml
-         images: |
-           ${{ env.containerRegistry }}.azurecr.io/${{ env.imageRepository }}:${{ env.tag }}
-         imagepullsecrets: |
-           ingress-demo
+         resource-group: '${{ env.resourceGroupName }}'      
